fix some mistakes, fix edits

--- a/src/app/Components/Pages/institutions/create-inst/create-inst.component.html
+++ b/src/app/Components/Pages/institutions/create-inst/create-inst.component.html
@@ -97,7 +97,7 @@
           [data]="showOptions"
           (itemClick)="onItemClick($event, dataItem)"
         >
-          <span class="k-icon k-i-settings"></span>
+          <span class="k-icon k-i-eye"></span>
           ნახვა
         </kendo-dropdownbutton>
       </ng-template>
